<resources>
    <string name="app_name">Logica App</string>
    <string name="conjunction_text">Conjunction (AND)</string>
    <string name="a_value">A</string>
    <string name="b_value">B</string>
    <string name="a_b_value">A ^ B</string>
    <string name="submit_btn">Submit</string>
    <string name="t_value">T</string>
    <string name="f_value">F</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>
